# SisDAQ

./: .gitignore  CMakeLists.txt  README.md
include/: ReadoutUnit.h  Registers.h  SISEthernetInterface.h  SISInterface.h  SISSettings.h  SISSettingsBuilder.h  VMEInterface.h
src/: ReadoutUnit.cc  SISEthernetInterface.cc  SISInterface.cc  SISSettings.cc  SISSettingsBuilder.cc  main.cc
